--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <div>
+            <a href="index.html">
             <h2>TPG Online</h2>
         </div>
         <nav>
