--- a/sitesfarmaciapopular.html
+++ b/sitesfarmaciapopular.html
@@ -12,7 +12,8 @@
 <body>
     <header>
         <div>
-            <h2>TPG Online</h2>
+            <a href="index.html">
+                <h2>TPG Online</h2>
         </div>
         <nav>
             <ul>
