--- a/consultaportaria.html
+++ b/consultaportaria.html
@@ -24,7 +24,7 @@
                 <a href="#sobre">
                     <li>Sobre</li>
                 </a>
-                <a href="#cursos">
+                <a href="download.html">
                     <li>Downloads</li>
                 </a>
             </ul>
@@ -33,9 +33,10 @@
 
     <section id="inicio">
         <div>
-            <h1>Farmácia Popular - Medicamentos Controlados</h1>
+            <h1>Medicamentos Controlados</h1>
             <p>Consulta de medicamentos com base na Portaria 344/98</p>
         </div>
+        <img src="/assets/portaria.png" alt="">
     </section>
 
     <section id="consulta-medicamentos">
@@ -57,14 +58,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>​Nome Comercial ​</td>
-                        <td>undefined</td>
-                        <td>undefined</td>
-                        <td>​Tipo de Receita </td>
-                        <td>​Ampola</td>
-                        <td>​Outros</td>
-                    </tr>
+                    
                     <tr>
                         <td>​Abilify</td>
                         <td>​Aripiprazol</td>
