--- a/download.html
+++ b/download.html
@@ -34,40 +34,40 @@
     <section id="inicio">
         <div>
             <h1>
-                Site de HOMOLOGAÇÃO e PRODUÇÃO (novos) - Farmácia Popular
+                Bem-vindo à sua nova página de downloads!
             </h1>
             <p>
-                Ambos os links dos sites estão disponíveis para consulta e uso conforme a necessidade da equipe técnica e demais envolvidos no processo de implementação
+                Fique à vontade para explorar e baixar o que precisar! 
             </p>
-            <a href="sitesfarmaciapopular.html">
-                <button>Saiba mais</button>
-            </a>
         </div>
-        <img src="/assets/farmaciapoplink.svg" alt="">
+        <img src="/assets/downloads.png" alt="">
     </section>
 
     <section id="sobre">
         <div>
-            <a href="consultaportaria.html">
-                <img src="/assets/Ativo-2.png" alt="">
-                <h1>Consulta Portaria</h1>
+            <a href="https://www.win-rar.com/fileadmin/winrar-versions/winrar/winrar-x64-701br.exe">
+                <img src="/assets/winrar.png" alt="">
+                <h1>Winrar</h1>
             </a>
-            <p>Medicamentos Controlados - Resumo Portaria 344/98</p>
+            <p>WinRAR 7.01 Portuguese Brazilian 64 bit</p>
         </div>
         <div>
-            <a href="https://cosmos.bluesoft.com.br/ncms">
-                <img src="/assets/Ativo-3.png" alt="Consulta NCM">
-                <h1>Consulta NCM</h1>
+            <a href="https://github.com/Open-Shell/Open-Shell-Menu/releases/download/v4.4.195/OpenShellSetup_4_4_195.exe">
+                <img src="/assets/openshell.png" alt="Consulta NCM">
+                <h1>OpenShell</h1>
             </a>
-            <p>Catálogo Online de Produtos - BlueSoftCosmos</p>
+            <p>OpenShell Setup 4.4.195
+            </p>
         </div>
         <div>
-            <a href="download.html">
-                <img src="/assets/downloads.png" alt="">
-                <h1>Suporte 24h</h1>
+            <a href="https://anydesk.com/pt/downloads/thank-you?dv=win_exe">
+                <img src="/assets/anydesk.png" alt="">
+                <h1>Anydesk</h1>
             </a>
-            <p>Fique à vontade para explorar e baixar o que precisar!</p>
+            <p>Anydesk v9.0.2</p>t</p>
         </div>
+
+        
     </section>
     
 
