--- a/sitesfarmaciapopular.html
+++ b/sitesfarmaciapopular.html
@@ -23,7 +23,7 @@
                 <a href="#sobre">
                     <li>Sobre</li>
                 </a>
-                <a href="#cursos">
+                <a href="download.html">
                     <li>Downloads</li>
                 </a>
             </ul>
