--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
         <img src="/assets/farmaciapoplink.svg" alt="">
     </section>
 
+    <section id="inicio">
+        <div>
+            <h1>
+                Medicamentos Controlados: A Regulação e Tipos de Receitas
+            </h1>
+            <p>
+                Este guia aborda a importância de entender os medicamentos controlados, suas categorias, regulamentação, e o papel crucial dos profissionais de saúde na garantia do uso seguro e responsável desses medicamentos.
+            </p>
+            
+            <a href="Medicamentos-Controlados-A-Regulacao-e-Tipos-de-Receitas.html">
+                
+                <button>Saiba mais</button>
+            </a>
+        </div>
+        <img src="/assets/carlos-farm.png" alt="">
+    </section>
+
+
     <section id="sobre">
         <div>
             <a href="consultaportaria.html">
