--- a/Medicamentos-Controlados-A-Regulacao-e-Tipos-de-Receitas.html
+++ b/Medicamentos-Controlados-A-Regulacao-e-Tipos-de-Receitas.html
@@ -62,14 +62,14 @@
                 <span class="icon">🧠</span>
                 <h3>Psicotrópicos (Listas A3, B1 e B2)</h3>
                 <p>Alteram o estado mental e emocional, usados para tratar transtornos psicológicos.</p>
-                <span class="exemplos">Exemplos: lorazepam, fluoxetina, citalopram, alprazolam, diazepam, clonazepam.</span>
+                <span class="exemplos">Exemplos: lorazepam, fluoxetina, citalopram, alprazolam, diazepam, clonazepam, canabidiol (CBD).</span>
             </div>
 
             <div class="categoria">
                 <span class="icon">📜</span>
                 <h3>Controle Especial (Lista C1)</h3>
                 <p>Exigem prescrição específica e controle rigoroso sobre a quantidade permitida.</p>
-                <span class="exemplos">Exemplos: venlafaxina, aleperidol, canabidiol (CBD), fluoxetina, Gabapentina, lítio, quetiapina.</span>
+                <span class="exemplos">Exemplos: venlafaxina, aleperidol, fluoxetina, Gabapentina, lítio, quetiapina.</span>
             </div>
         </div>
     </section>
