--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div>
             <a href="download.html">
                 <img src="/assets/downloads.png" alt="">
-                <h1>Suporte 24h</h1>
+                <h1>Downloads</h1>
             </a>
             <p>Fique à vontade para explorar e baixar o que precisar!</p>
         </div>
