--- a/link-farmacias-credenciadas-pfpb.html
+++ b/link-farmacias-credenciadas-pfpb.html
@@ -46,10 +46,10 @@
         <section class="card bg-secondary border-0 shadow-lg mb-5">
             <div class="card-body">
                 <h1 class="text-info mb-4">
-                    <i class="bi bi-building"></i> Portais Farmácia Popular
+                    <i class="bi bi-building"></i> Acesse a Lista de Farmácias Credenciadas ao PFPB
                 </h1>
                 <p class="lead text-light mb-4">
-                    Ambos os links dos sites estão disponíveis para consulta e uso conforme a necessidade da equipe técnica.
+                    Programa Farmácia Popular do Brasil. Atualizada em 31/12/2024
                 </p>
             </div>
         </section>
@@ -62,29 +62,11 @@
                         <div class="d-flex align-items-center gap-3">
                             <i class="bi bi-gear fs-1 text-info"></i>
                             <div>
-                                <h2 class="text-info mb-3">Homologação</h2>
-                                <a href="https://farmaciapopular-portal-homologacao.saude.gov.br/farmaciapopular-portal/login.jsf" 
+                                <h2 class="text-info mb-3">Baixar Lista</h2>
+                                <a href="https://www.gov.br/saude/pt-br/composicao/sectics/farmacia-popular/arquivos/farmacias_credenciadas_pfpb_atualizada.xlsx/@@download/file" 
                                    class="btn btn-danger" 
                                    target="_blank">
-                                    <i class="bi bi-box-arrow-up-right"></i> Acessar Homologação
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-6">
-                <div class="card bg-secondary border-0 shadow-lg h-100">
-                    <div class="card-body">
-                        <div class="d-flex align-items-center gap-3">
-                            <i class="bi bi-check-circle fs-1 text-info"></i>
-                            <div>
-                                <h2 class="text-info mb-3">Produção</h2>
-                                <a href="https://farmaciapopular-portal.saude.gov.br/farmaciapopular-portal/login.jsf" 
-                                   class="btn btn-danger" 
-                                   target="_blank">
-                                    <i class="bi bi-box-arrow-up-right"></i> Acessar Produção
+                                    <i class="bi bi-box-arrow-up-right"></i> Link Download
                                 </a>
                             </div>
                         </div>
