--- a/download.html
+++ b/download.html
@@ -7,6 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/index.css">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XZ6RD9SGHR');
+</script>
+
 </head>
 <body class="bg-dark text-light">
     <!-- Header -->
@@ -92,8 +103,28 @@
                     </div>
                 </div>
             </div>
+
+                 <!-- SpeedFan  -->
+            <div class="col-md-4">
+                <div class="card bg-secondary border-0 shadow-lg h-100">
+                    <div class="card-body text-center">
+                        <i class="bi bi-display fs-1 text-info mb-3"></i>
+                        <h3 class="text-info mb-3">SpeedFan</h3>
+                        <p class="text-light mb-4">SpeedFan 4.52</p>
+                        <a href="https://www.almico.com/speedfan452.exe" 
+                           class="btn btn-danger" 
+                           target="_blank">
+                            <i class="bi bi-download"></i> Baixar
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
+
+
+
 
     <!-- Footer -->
     <footer class="bg-gradient py-4 mt-5">
