--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/index.css">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XZ6RD9SGHR');
+</script>
+
 </head>
 <body class="bg-dark text-light">
     <!-- Header -->
@@ -43,6 +54,7 @@
                                 <p class="card-text text-light mb-4">
                                     Acesso aos ambientes técnicos com documentação atualizada e suporte especializado.
                                 </p>
+                                <p>Publicado em 30/01/2025 22h03</p>
                                 <a href="sitesfarmaciapopular.html" class="btn btn-danger px-4">
                                     <i class="bi bi-box-arrow-up-right"></i> Acessar Portais
                                 </a>
@@ -62,6 +74,7 @@
                                 <p class="card-text text-light mb-4">
                                     Guia completo sobre controle de substâncias e atualizações regulatórias.
                                 </p>
+                                <p>Publicado em 30/01/2025 22h03</p>
                                 <a href="Medicamentos-Controlados-A-Regulacao-e-Tipos-de-Receitas.html" class="btn btn-danger px-4">
                                     <i class="bi bi-journal-text"></i> Ver Diretrizes
                                 </a>
@@ -70,6 +83,46 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-12">
+                <div class="card bg-secondary border-0 shadow-lg h-100">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center gap-4">
+                            <i class="bi bi-file-medical fs-1 text-info"></i>
+                            <div>
+                                <h2 class="card-title text-info mb-3">Lista de Medicamentos - Código de Barras PFPB</h2>
+                                <p class="card-text text-light mb-4">
+                                    Publicado em 30/01/2025 22h03
+                                </p>
+                                <a href="links-listas.-farmacia-popular-2025.html" class="btn btn-danger px-4">
+                                    <i class="bi bi-journal-text"></i> Ver Diretrizes
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <div class="card bg-secondary border-0 shadow-lg h-100">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center gap-4">
+                            <i class="bi bi-file-medical fs-1 text-info"></i>
+                            <div>
+                                <h2 class="card-title text-info mb-3">Acesse a Lista de Farmácias Credenciadas ao PFPB</h2>
+                                <p class="card-text text-light mb-4">
+                                    Programa Farmácia Popular do Brasil. Atualizada em 31/12/2024
+                                </p>
+                                <a href="link-farmacias-credenciadas-pfpb.html" class="btn btn-danger px-4">
+                                    <i class="bi bi-journal-text"></i> Link para Download
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </section>
 
         <!-- Seção Serviços -->
@@ -78,9 +131,9 @@
                 <div class="card bg-secondary border-0 shadow-lg h-100">
                     <div class="card-body text-center">
                         <i class="bi bi-file-earmark-medical fs-1 text-info mb-3"></i>
-                        <h3 class="card-title text-info mb-3">Consulta Regulatória</h3>
+                        <h3 class="card-title text-info mb-3">Consulta Portaria</h3>
                         <p class="card-text text-light mb-4">
-                            Legislação atualizada sobre medicamentos controlados
+                            Medicamentos Controlados - Resumo Portaria 344/98
                         </p>
                         <a href="consultaportaria.html" class="btn btn-outline-info">
                             <i class="bi bi-search"></i> Consultar
