--- a/download.html
+++ b/download.html
@@ -120,6 +120,23 @@
                 </div>
             </div>
 
+                  <!--   -->
+                  <div class="col-md-4">
+                    <div class="card bg-secondary border-0 shadow-lg h-100">
+                        <div class="card-body text-center">
+                            <i class="bi bi-display fs-1 text-info mb-3"></i>
+                            <h3 class="text-info mb-3">CrystalDisk</h3>
+                            <p class="text-light mb-4">CrystalDiskInfo 9.5.0</p>
+                            <a href="https://drive.google.com/file/d/1Lmz2xFvLhkG7ERugLmQEvQ5UKoV1Hr3i/view?usp=sharing" 
+                               class="btn btn-danger" 
+                               target="_blank">
+                                <i class="bi bi-download"></i> Baixar
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
         </section>
     </main>
 
