--- a/Medicamentos-Controlados-A-Regulacao-e-Tipos-de-Receitas.html
+++ b/Medicamentos-Controlados-A-Regulacao-e-Tipos-de-Receitas.html
@@ -33,7 +33,7 @@
                     <a class="nav-link text-white fw-medium" href="index.html">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white fw-medium" href="#sobre">Sobre</a>
+                    <a class="nav-link text-white fw-medium" href="tutoriais.html">Utilitários</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white fw-medium" href="download.html">Downloads</a>
