--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link text-white fw-medium" href="index.html">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white fw-medium" href="index.html">Serviços</a>
+                    <a class="nav-link text-white fw-medium" href="tutoriais.html">Utilitários</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white fw-medium" href="download.html">Downloads</a>
