--- a/tutoriais.html
+++ b/tutoriais.html
@@ -75,6 +75,27 @@
                 </div>
             </div>
 
+
+            <div class="col-12">
+                <div class="card bg-secondary border-0 shadow-lg h-100">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center gap-4">
+                            <i class="bi bi-file-earmark-text fs-1 text-info"></i> <!-- Ícone de documento -->
+                            <div>
+                                <h2 class="card-title text-info mb-3">Tutorial: Ative Seu Office 365 Facilmente Com Este Passo a Passo</h2>
+                                <p class="card-text text-light mb-4">
+                                    Aprenda a ativar seu Office 365 sem precisar instalar programas adicionais. Siga nosso guia prático e tenha seu Office funcionando em minutos!
+                                </p>
+                                <p>Publicado em 30/01/2025 22h03</p>
+                                <a href="ativar-office-365-sem-instalar-nenhum-programa.html" class="btn btn-danger px-4">
+                                    <i class="bi bi-box-arrow-up-right"></i> Acessar Tutorial
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
        
          
 
