--- a/cnpj.html
+++ b/cnpj.html
@@ -3,35 +3,48 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Consulta CNPJ</title>
-  <meta name="description" content="Consulta de CNPJ com validação e exibição organizada." />
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!-- Página CSS -->
-  <link rel="stylesheet" href="css/cnpj.css">
+  <title>Consulta de CNPJ • TPG Online</title>
+  <meta name="description" content="Consulta pública de CNPJ com validação local e exibição organizada.">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/theme.css">
 </head>
-<body class="bg-dark text-light">
+<body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-gradient border-bottom border-secondary sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">TPG<span class="text-primary">Online</span></a>
+      <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegação">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto align-items-lg-center">
           <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
           <li class="nav-item"><a class="nav-link active" href="cnpj.html">Consultar CNPJ</a></li>
+          <li class="nav-item d-none" data-nav-admin><a class="nav-link" href="#" onclick="alert('Área restrita de Usuários');return false;">Usuários</a></li>
+          <li class="nav-item dropdown ms-lg-2">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Conta (<span id="current-user-label">convidado</span>)
+            </a>
+            <div class="dropdown-menu dropdown-menu-end p-3" style="min-width:260px">
+              <form id="set-user-form" class="d-grid gap-2">
+                <label for="userNameInput" class="form-label">Definir usuário (demo)</label>
+                <input id="userNameInput" class="form-control form-control-sm" placeholder="Ex.: admin">
+                <button class="btn btn-primary btn-sm" type="submit">Salvar & atualizar</button>
+                <div class="form-text">Dica: use <strong>admin</strong> para ver o menu Usuários.</div>
+              </form>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <main class="py-4">
-    <div class="container">
+  <main class="section">
+    <div class="container container-narrow">
       <h1 class="h3 fw-bold mb-3">Consulta de CNPJ</h1>
 
-      <!-- Formulário -->
       <form id="cnpj-form" class="row g-3" novalidate>
         <div class="col-12 col-md-8">
           <label for="cnpj" class="form-label">Digite o CNPJ</label>
@@ -39,7 +52,7 @@
             <span class="input-group-text">CNPJ</span>
             <input id="cnpj" type="text" class="form-control" inputmode="numeric" placeholder="00.000.000/0000-00" maxlength="18" required>
           </div>
-          <div class="form-text text-secondary">Aceita com ou sem pontuação. Validamos os dígitos localmente.</div>
+          <div class="form-text text-muted-2">Aceita com ou sem pontuação. Validamos os dígitos localmente.</div>
         </div>
         <div class="col-12 col-md-4 d-flex align-items-end">
           <button class="btn btn-primary w-100" type="submit">Consultar</button>
@@ -48,20 +61,18 @@
 
       <div id="status" class="mt-3"></div>
 
-      <!-- Resultados -->
       <div id="results" class="row g-3 mt-2 d-none"></div>
     </div>
   </main>
 
-  <footer class="py-4 border-top border-secondary bg-dark">
-    <div class="container small text-center text-secondary">
-      © <span id="year"></span> Seu Site. Dados públicos via BrasilAPI. 
+  <footer class="site-footer py-4">
+    <div class="container text-center small">
+      © <span id="year"></span> TPG Online. Dados públicos via BrasilAPI.
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <!-- Script da página -->
-  <script src="js/cnpj.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="assets/js/app.js" defer></script>
+  <script src="assets/js/cnpj.js" defer></script>
 </body>
 </html>
