--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/index.css">
 </head>
+
+<div id="cookie-banner" class="cookie-banner">
+  <p>
+    Usamos cookies para melhorar sua experiência. Alguns são essenciais, outros opcionais.
+    Veja nossa <a href="cookies.html">Política de Cookies</a>.
+  </p>
+  <div class="mt-2">
+    <button id="acceptCookies" class="btn btn-primary btn-sm">Aceitar Cookies</button>
+    <button id="rejectCookies" class="btn btn-outline-light btn-sm">Recusar Cookies</button>
+  </div>
+</div>
+
+<style>
+.cookie-banner {
+  position: fixed;
+  bottom: 0;
+  left: 0; right: 0;
+  background: #111;
+  color: #fff;
+  padding: 15px;
+  text-align: center;
+  z-index: 1000;
+  display: none;
+}
+.cookie-banner a { color: #58a6ff; }
+</style>
+
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const banner = document.getElementById("cookie-banner");
+  if (!localStorage.getItem("cookiesChoice")) {
+    banner.style.display = "block";
+  }
+  document.getElementById("acceptCookies").onclick = () => {
+    localStorage.setItem("cookiesChoice", "accepted");
+    banner.style.display = "none";
+  };
+  document.getElementById("rejectCookies").onclick = () => {
+    localStorage.setItem("cookiesChoice", "rejected");
+    banner.style.display = "none";
+  };
+});
+</script>
+
+
 <body>
   
 <!-- Navbar inline -->
@@ -101,12 +146,15 @@
   </div>
 </section>
 
-  <footer class="site-footer py-4">
-    <div class="container text-center small">
-      © <span id="year"></span> TPG Online.
-    </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  <script>document.getElementById("year").textContent=new Date().getFullYear();</script>
+<footer class="site-footer py-4">
+  <div class="container text-center small">
+    © <span id="year"></span> TPG Online · 
+    <a href="privacy.html">Privacidade</a> · 
+    <a href="terms.html">Termos</a> · 
+    <a href="cookies.html">Cookies</a>
+  </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
