--- a/ncm.html
+++ b/ncm.html
@@ -90,8 +90,17 @@
 </main>
 
 <footer class="site-footer py-4">
-  <div class="container text-center small">© <span id="year"></span> TPG Online.</div>
+  <div class="container text-center small">
+    © <span id="year"></span> TPG Online · 
+    <a href="privacy.html">Privacidade</a> · 
+    <a href="terms.html">Termos</a> · 
+    <a href="cookies.html">Cookies</a>
+  </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+</body>
+</html>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="assets/js/copy.js"></script>
