--- a/cookies.html
+++ b/cookies.html
@@ -8,23 +8,27 @@
   <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 <body>
+
+
+<!-- Navbar inline -->
 <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="mainNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="cnpj.html">Consultar CNPJ</a></li>
-        <li class="nav-item"><a class="nav-link" href="cep.html">Consultar CEP</a></li>
-        <li class="nav-item"><a class="nav-link" href="ncm.html">Consultar NCM</a></li>
-        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-      </ul>
+    <div class="container">
+      <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
+          <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
+          <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
+          <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
+          <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+
 <main class="section">
     <div class="container container-narrow">
       <h1 class="h3 fw-bold mb-3">Política de Cookies</h1>
