--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
         <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
         <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
-        <li class="nav-item"><a class="nav-link " href="login.html">Login</a></li>
+        <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
   </div>
