--- a/privacy.html
+++ b/privacy.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 <body>
+
+
+<!-- Navbar inline -->
 <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
@@ -16,11 +19,11 @@
     </button>
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="cnpj.html">Consultar CNPJ</a></li>
-        <li class="nav-item"><a class="nav-link" href="cep.html">Consultar CEP</a></li>
-        <li class="nav-item"><a class="nav-link" href="ncm.html">Consultar NCM</a></li>
-        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
+        <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
+        <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
+        <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
+        <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
   </div>
@@ -47,7 +50,7 @@
     <p>Podemos atualizar esta política a qualquer momento. Recomendamos revisar esta página regularmente.</p>
 
     <h2 class="h5 mt-4">6. Contato</h2>
-    <p>Se tiver dúvidas, entre em contato pelo e-mail: <strong>contato@seudominio.com</strong></p>
+    <p>Se tiver dúvidas, entre em contato pelo e-mail: <strong>gl980053@gmail.com</strong></p>
   </div>
 </main>
 
