--- a/terms.html
+++ b/terms.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 <body>
+
+<!-- Navbar inline -->
 <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
@@ -16,16 +18,15 @@
     </button>
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="cnpj.html">Consultar CNPJ</a></li>
-        <li class="nav-item"><a class="nav-link" href="cep.html">Consultar CEP</a></li>
-        <li class="nav-item"><a class="nav-link" href="ncm.html">Consultar NCM</a></li>
-        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
+        <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
+        <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
+        <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
+        <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
   </div>
 </nav>
-
 <main class="section">
     <div class="container container-narrow">
       <h1 class="h3 fw-bold mb-3">Termos de Uso</h1>
