--- a/index.html
+++ b/index.html
@@ -81,21 +81,35 @@ document.addEventListener("DOMContentLoaded", () => {
     <div class="row align-items-center g-4">
       <div class="col-12 col-lg-6">
         <h1 class="display-5 fw-bold">TPG Online</h1>
-        <p class="lead">Soluções web simples e funcionais. Base sólida em Bootstrap 5 com tema escuro.</p>
+        <p class="lead">Consultas rápidas, landing pages e muito mais.</p>
         <div class="d-flex gap-2 flex-wrap">
           <a class="btn btn-primary btn-lg" href="cnpj.html">Consultar CNPJ</a>
           <a class="btn btn-outline-light btn-lg" href="cep.html">Consultar CEP</a>
           <a class="btn btn-outline-light btn-lg" href="ncm.html">Consultar NCM</a>
+                <!-- Botão WhatsApp -->
+                    <a href="https://wa.me/5518997329690?text=Ol%C3%A1%2C+tenho+interesse+em+criar+uma+landing+page" 
+                    target="_blank" 
+                    class="btn btn-success btn-lg">
+                    📲 Criar Minha Landing Page
+                    </a>
         </div>
       </div>
       <div class="col-12 col-lg-6 text-center">
         <img src="assets/img/hero.png" class="hero-illus" alt="Ilustração">
+        
       </div>
+
     </div>
+    
   </div>
 </header>
 
+
+
+
+
 <section id="features" class="section">
+  
   <div class="container">
     <div class="row g-3">
       <div class="col-12 col-sm-6 col-lg-3">
