--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
         <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
         <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
+        <li class="nav-item"><a class="nav-link "  href="fipe.html">Consultar FIPE</a></li>
         <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
@@ -86,6 +87,7 @@ document.addEventListener("DOMContentLoaded", () => {
           <a class="btn btn-primary btn-lg" href="cnpj.html">Consultar CNPJ</a>
           <a class="btn btn-outline-light btn-lg" href="cep.html">Consultar CEP</a>
           <a class="btn btn-outline-light btn-lg" href="ncm.html">Consultar NCM</a>
+          <a class="btn btn-outline-light btn-lg" href="fipe.html">Consultar FIPE</a>
                 <!-- Botão WhatsApp -->
                     <a href="https://wa.me/5518997329690?text=Ol%C3%A1%2C+tenho+interesse+em+criar+uma+landing+page" 
                     target="_blank" 
