--- a/fipe.html
+++ b/fipe.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Consulta de CEP • TPG Online</title>
-  <meta name="description" content="Consulta de CEP • TPG Online">
+  <title>Consulta Tabela FIPE • TPG Online</title>
+  <meta name="description" content="Consulta Tabela FIPE • TPG Online">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
-  <link rel="stylesheet" href="assets/css/cep.css">
+  <link rel="stylesheet" href="assets/css/fipe.css">
 </head>
 <body>
-
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
@@ -23,9 +22,9 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link " href="index.html">Início</a></li>
         <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
-        <li class="nav-item"><a class="nav-link active"  href="cep.html">Consultar CEP</a></li>
+        <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
         <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
-        <li class="nav-item"><a class="nav-link "  href="fipe.html">Consultar FIPE</a></li>
+        <li class="nav-item"><a class="nav-link active"  href="fipe.html">Consultar FIPE</a></li>
         <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
@@ -34,17 +33,17 @@
 
 <main class="section">
   <div class="container container-narrow">
-    <h1 class="h3 fw-bold mb-3">Consulta de CEP</h1>
+    <h1 class="h3 fw-bold mb-3">Consulta Tabela FIPE</h1>
 
-    <!-- Fonte da API / Transparência -->
+    <!-- Fonte da API -->
     <div class="alert alert-secondary small bg-transparent border rounded-3 px-3 py-3 mb-3">
       <div class="d-flex align-items-start gap-2">
         <span class="badge bg-info text-dark">Fonte</span>
         <div>
-          <strong>Dados de CEP via BrasilAPI</strong> — serviço público e gratuito.
+          <strong>Dados da Tabela FIPE via API Parallelum</strong> — serviço público e gratuito criado pela comunidade.
           Endpoint consultado:
-          <code>https://brasilapi.com.br/api/cep/v1/&lt;cep&gt;</code>.
-          <div class="note mt-2">Obs.: se o CEP não existir, a consulta retornará erro.</div>
+          <code>https://parallelum.com.br/fipe/api/v1/&lt;tipo&gt;/marcas</code>.
+          <div class="note mt-2">Obs.: Os valores são atualizados mensalmente conforme a Tabela FIPE oficial.</div>
         </div>
       </div>
     </div>
@@ -52,35 +51,47 @@
     <!-- Guia rápido -->
     <p class="small text-muted mb-2">
       <a class="link-light link-underline-opacity-0 fw-semibold"
-         data-bs-toggle="collapse" href="#cepHelp" role="button"
-         aria-expanded="false" aria-controls="cepHelp">
+         data-bs-toggle="collapse" href="#fipeHelp" role="button"
+         aria-expanded="false" aria-controls="fipeHelp">
         👉 Clique aqui para ver como interpretar os campos desta consulta
       </a>
     </p>
-    <div class="collapse mb-3" id="cepHelp">
+    <div class="collapse mb-3" id="fipeHelp">
       <div class="card card-body bg-surface text-light small">
         <ul class="mb-0">
-          <li><strong>Rua</strong>: logradouro (quando cadastrado).</li>
-          <li><strong>Bairro</strong>: bairro correspondente.</li>
-          <li><strong>Cidade / UF</strong>: município e estado.</li>
-          <li><strong>CEP</strong>: número formatado como 00000-000.</li>
+          <li><strong>Tipo de Veículo</strong>: carros, motos ou caminhões.</li>
+          <li><strong>Marca / Modelo / Ano</strong>: selecionados a partir da Tabela FIPE.</li>
+          <li><strong>Valor</strong>: preço médio calculado pela FIPE para o mês de referência.</li>
+          <li><strong>Código FIPE</strong>: código único usado para identificar o veículo.</li>
+          <li><strong>Mês de Referência</strong>: período em que o preço está atualizado.</li>
         </ul>
       </div>
     </div>
 
     <!-- Formulário -->
-    <form id="cep-form" class="row g-3 query-form" novalidate>
+    <form id="fipe-form" class="row g-3 query-form align-items-end" novalidate>
       <div class="col-12">
-        <label for="cep" class="form-label">Digite o CEP</label>
-        <div class="input-group input-group-lg">
-          <span class="input-group-text">CEP</span>
-          <input id="cep" type="text" class="form-control form-control-lg" inputmode="numeric"
-                 placeholder="00000-000" maxlength="9" required>
-        </div>
-        <div class="form-text text-muted-2">Aceita com ou sem hífen. Formatamos automaticamente.</div>
+        <label for="tipo" class="form-label">Selecione o tipo de veículo</label>
+        <select id="tipo" class="form-select form-select-lg" required>
+          <option value="" selected disabled>Selecione o tipo de veículo</option>
+          <option value="carros">Carros</option>
+          <option value="motos">Motos</option>
+          <option value="caminhoes">Caminhões</option>
+        </select>
+        
       </div>
-
-      <!-- Botão embaixo, largura total -->
+      <div class="col-12">
+        <label for="marca" class="form-label">Marca</label>
+        <select id="marca" class="form-select form-select-lg" required></select>
+      </div>
+      <div class="col-12">
+        <label for="modelo" class="form-label">Modelo</label>
+        <select id="modelo" class="form-select form-select-lg" required></select>
+      </div>
+      <div class="col-12">
+        <label for="ano" class="form-label">Ano</label>
+        <select id="ano" class="form-select form-select-lg" required></select>
+      </div>
       <div class="col-12">
         <button class="btn btn-primary btn-lg w-100 mt-2" type="submit">Consultar</button>
       </div>
@@ -99,12 +110,11 @@
     <a href="cookies.html">Cookies</a>
   </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-</body>
-</html>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script src="assets/js/cep.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/fipe.js" defer></script>
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
