--- a/ncm.html
+++ b/ncm.html
@@ -20,10 +20,11 @@
     </button>
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
+        <li class="nav-item"><a class="nav-link " href="index.html">Início</a></li>
         <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
         <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
-        <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
+        <li class="nav-item"><a class="nav-link active"  href="ncm.html">Consultar NCM</a></li>
+        <li class="nav-item"><a class="nav-link "  href="fipe.html">Consultar FIPE</a></li>
         <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
