--- a/terms.html
+++ b/terms.html
@@ -22,11 +22,14 @@
         <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
         <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
         <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
+        <li class="nav-item"><a class="nav-link "  href="fipe.html">Consultar FIPE</a></li>
         <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
+
 <main class="section">
     <div class="container container-narrow">
       <h1 class="h3 fw-bold mb-3">Termos de Uso</h1>
