--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ document.addEventListener("DOMContentLoaded", () => {
           <a class="btn btn-outline-light btn-lg" href="cep.html">Consultar CEP</a>
           <a class="btn btn-outline-light btn-lg" href="ncm.html">Consultar NCM</a>
           <a class="btn btn-outline-light btn-lg" href="fipe.html">Consultar FIPE</a>
+          <a class="btn btn-outline-light btn-lg" href="qi.html">Teste QI</a>
                 <!-- Botão WhatsApp -->
                     <a href="https://wa.me/5518997329690?text=Ol%C3%A1%2C+tenho+interesse+em+criar+uma+landing+page" 
                     target="_blank" 
