--- a/qi.html
+++ b/qi.html
@@ -10,7 +10,7 @@
   <main class="container">
     <div class="card">
       <h1>Teste de QI — 30 questões</h1>
-      <p>Responda honestamente. Ao fim, pague <strong>R$ 3,99</strong> para liberar seu resultado e certificado simbólico.</p>
+      <p>Responda honestamente, e no final saiba como esta seu QI.</p>
 
       <label for="name">Nome</label>
       <input id="name" type="text" placeholder="Seu nome" />
