--- a/qrcode.html
+++ b/qrcode.html
@@ -49,6 +49,9 @@
     <p class="text-muted mb-4">Crie QR Codes para links, Wi-Fi, WhatsApp, textos e e-mails.</p>
 
     <div class="menu mb-4">
+      <button class="btn-option pix" onclick="abrirFormulario('pix')">
+        <i class="fa-solid fa-money-bill-wave"></i> PIX
+      </button>      
       <button class="btn-option url" onclick="abrirFormulario('url')">
         <i class="fa-solid fa-link"></i> URL
       </button>
