--- a/index.html
+++ b/index.html
@@ -115,57 +115,51 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
-<section id="features" class="section">
-  
-  <div class="container">
-    <div class="row g-3">
-      <div class="col-12 col-sm-6 col-lg-3">
-        <div class="card border-0 round-xl shadow-soft feature-card">
-          <div class="card-body">
-            <h5 class="card-title">Responsivo</h5>
-            <p class="card-text text-muted-2">Layout fluido para celular, tablet e desktop.</p>
-          </div>
-          <div class="card-footer bg-transparent border-0">
-            <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-3">
-        <div class="card border-0 round-xl shadow-soft feature-card">
-          <div class="card-body">
-            <h5 class="card-title">Rápido</h5>
-            <p class="card-text text-muted-2">HTML/CSS/JS diretos, sem dependências pesadas.</p>
-          </div>
-          <div class="card-footer bg-transparent border-0">
-            <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-3">
-        <div class="card border-0 round-xl shadow-soft feature-card">
-          <div class="card-body">
-            <h5 class="card-title">Seguro</h5>
-            <p class="card-text text-muted-2">Sem eval/inline; limpeza de dados nas consultas.</p>
-          </div>
-          <div class="card-footer bg-transparent border-0">
-            <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-3">
-        <div class="card border-0 round-xl shadow-soft feature-card">
-          <div class="card-body">
-            <h5 class="card-title">Conversor</h5>
-            <p class="card-text text-muted-2">Ferramenta extra para breve.</p>
-          </div>
-          <div class="card-footer bg-transparent border-0">
-            <span class="btn btn-outline-primary w-100 disabled">Em breve</span>
-          </div>
-        </div>
-      </div>
+<section id="features" class="section py-5">
+  <div class="container text-center">
+    <h2 class="text-info fw-bold mb-4">Explore o TPG Online ⚡</h2>
+    <p class="text-muted mb-5">Clique em uma das ferramentas abaixo para começar</p>
+
+    <div class="features-grid">
+      <a href="cnpj.html" class="feature-btn">
+        <i class="fa-solid fa-building"></i>
+        <h5>Consultar CNPJ</h5>
+        <p>Informações completas sobre empresas.</p>
+      </a>
+
+      <a href="cep.html" class="feature-btn">
+        <i class="fa-solid fa-location-dot"></i>
+        <h5>Consultar CEP</h5>
+        <p>Descubra endereços e localidades.</p>
+      </a>
+
+      <a href="ncm.html" class="feature-btn">
+        <i class="fa-solid fa-barcode"></i>
+        <h5>Consultar NCM</h5>
+        <p>Classificação fiscal de produtos.</p>
+      </a>
+
+      <a href="fipe.html" class="feature-btn">
+        <i class="fa-solid fa-car"></i>
+        <h5>Tabela FIPE</h5>
+        <p>Valores atualizados de veículos.</p>
+      </a>
+
+      <a href="qrcode.html" class="feature-btn">
+        <i class="fa-solid fa-qrcode"></i>
+        <h5>Gerar QR Code</h5>
+        <p>Crie QR Codes personalizados.</p>
+      </a>
+
+      <a href="pagamento.html" class="feature-btn">
+        <i class="fa-solid fa-hand-holding-dollar"></i>
+        <h5>Apoiar o Site</h5>
+        <p>Contribua com o projeto TPG Online 💙</p>
+      </a>
     </div>
   </div>
 </section>
+
 
 <footer class="site-footer py-4">
   <div class="container text-center small">
