--- a/resultado.html
+++ b/resultado.html
@@ -6,6 +6,17 @@
   <title>Resultado - Teste de QI</title>
   <link rel="stylesheet" href="assets/css/qi.css">
   <script src="https://sdk.mercadopago.com/js/v2"></script>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XZ6RD9SGHR');
+</script>
+
 </head>
 <body>
   <div class="container" id="container">
