--- a/certificado.html
+++ b/certificado.html
@@ -7,7 +7,19 @@
   <link rel="stylesheet" href="./assets/css/certificado.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XZ6RD9SGHR');
+</script>
+
 </head>
+
 <body>
   <div class="container">
     <div id="certificado" class="certificado">
