--- a/pagamento.html
+++ b/pagamento.html
@@ -11,6 +11,17 @@
   <link rel="stylesheet" href="assets/css/pagamento.css">
 
   <script src="https://sdk.mercadopago.com/js/v2"></script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XZ6RD9SGHR');
+</script>
+
 </head>
 <body>
 
