--- a/qi.html
+++ b/qi.html
@@ -5,6 +5,17 @@
   <title>Iniciar Teste de QI</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="assets/css/qi.css" />
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XZ6RD9SGHR');
+</script>
+
 </head>
 <body>
   <main class="container">
